1.4.1
-----
1. Fix compilation when -DQTC_STYLE_SUPPORT=true
2. Re-add support for keep above/below kwin buttons.
3. Fix compilation with KDE SC4.3
4. Add option to draw dark inner border in kwin decoration.
5. Fix garbled window decoration when not compositing.
6. For MDI window titles, if left-aligning ensure text is at least 6 pixels
   from edge.

1.4.0
-----
 1. Add striped window and menu background options.
 2. Added options to not square frames and tab frames.
 3. Fix 'bleed' of progress stripes when using animated faded stripes.
 4. Blend menubar and window titlebar gradients if:
         menubar, titlebar, and inactive titlebar gradients match AND
         not blending titlebar gradient AND
         using window titlebar colour for menubar AND
         extending window drag into menubar
 5. Default titlebar colours to window colours - matches KDE4 default.
 6. If using window border colours as menubar colours, and the active and inactive
    titlebar colours are the same, then always use the active titlebar text colour
    for the menubar.
 7. When shading menubars only when active, or using window border colours as menubar
    colours, the kwin deocration will send an X11 event to the client window when
    the active window changes - this allws Gtk2 to keep track.
 8. Dont etch window button icons unless not drawing the frame - doesn't look
    good otherwise.
 9. Re-organised window decoration config items and module.
10. Get QtCreator to use QtCurve style for menubar, and for the toolbar in KFileDialog
    (KFileDialog is not 100%, but still looks better...)
11. Add sunken background to window titlebar button options.
12. Titlebar button modifications:
    - Dont support keep above/below buttons
    - Change shade/unshade to be an arrow with line above/below
    - Add option to use arrows for the icons of min and max buttons.
    - Better icon for 'on all desktops'
13. Always use a 1 pixel border for toolbars - as using a border of 0 can cause